--- a/blueprints/package.json
+++ b/blueprints/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Temporal-IaC",
+    "name": "blueprints",
     "main": "index.ts",
     "devDependencies": {
         "@types/node": "^18",
@@ -7,7 +7,6 @@
     },
     "dependencies": {
         "@pulumi/pulumi": "^3.113.0",
-        "@pulumi/aws": "^6.0.0",
         "@port-labs/port":"2.10.0"
     }
 }
